--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@ a[x-apple-data-detectors] {
                        </table></td>
                      </tr>
                      <tr>
-                      <td align="center" style="padding:0;Margin:0;padding-top:10px;padding-bottom:20px"><img class="adapt-img" alt width="518" src="https://cdt-timer.stripocdn.email/api/v1/images/zgblUK71w-HIyJyUavPeOf_aSHog2XgydJQUufLgj_M?%3B%3Btoken=f421137d-6e09-4b7b-8108-088e32382a0b&amp;%3Btoken=b279575d-32c2-43ba-94fd-3e6efd1742ff&amp;token=6adeb411-46c8-4de7-aa54-c09240839955&amp;l=1706472762638" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></td>
-                     </tr>
+                       <td align="center" class="esd-block-timer es-p10t es-p20b" esdev-config="h4"><a target="_blank" href><img class="adapt-img" alt width="518" src="https://cdt-timer.stripocdn.email/api/v1/images/zgblUK71w-HIyJyUavPeOf_aSHog2XgydJQUufLgj_M?time=1706465638090&%3B%3B%3Btoken=f421137d-6e09-4b7b-8108-088e32382a0b&%3B%3Btoken=b279575d-32c2-43ba-94fd-3e6efd1742ff&%3Btoken=761ae521-e112-4f28-b6cf-cbb23d0ce7aa&token=8f5cdeba-4242-49df-87cd-b01472c21613"></a></td>
                      <tr>
                       <td align="center" style="Margin:0;padding-bottom:20px;padding-left:20px;padding-right:20px;padding-top:25px;font-size:0">
                        <table border="0" width="100%" height="100%" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
